fixed issue where gallery images were not displaying on mobile.

--- a/src/index.css
+++ b/src/index.css
@@ -109,6 +109,9 @@ h1.section-title {
 .react-photo-album--photo {
   transition: transform 0.3s ease;
   cursor: pointer;
+  min-height: 200px;
+  background: red;
+
 }
 
 .react-photo-album--photo:hover {
